--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .ipynb_checkpoints
+convolutional-neural-networks/mnist-mlp/data/raw/train-images-idx3-ubyte
+*.pt
+convolutional-neural-networks/mnist-mlp/data/raw/t10k-images-idx3-ubyte
+convolutional-neural-networks/mnist-mlp/data/raw/t10k-labels-idx1-ubyte
+convolutional-neural-networks/mnist-mlp/data/raw/train-labels-idx1-ubyte
+convolutional-neural-networks/mnist-mlp/model.pt
